# local-ai-agent

./: .env.example  .gitignore  README.md
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application-dev.yml  application-prod.yml  application-windows-local.yml  application.yml  logback-spring-json.xml
backend/src/main/resources/prompts/: system_medical_disclaimer.md  system_normal.md
docs/: ARCHITECTURE.md  DESIGN_RULES.md  FRONTEND_PLAN.md  FRONTEND_STATE.md  INSTALL_AND_RUN.md  PHASE_ROADMAP.md  PROJECT_STATE.md  SMOKE_TEST.md  WINDOWS_LOCAL.md
frontend/: capacitor.config.ts  package-lock.json  package.json
frontend/src/: global.scss  main.ts
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/api/: sse-event.types.ts  sse-stream.service.ts
frontend/src/app/core/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts  auth.types.ts  token-storage.service.ts  user.service.ts
frontend/src/app/core/ui/: settings.service.ts  theme.service.ts  toast.service.ts
frontend/src/app/features/auth/: login.page.ts  register.page.ts
frontend/src/app/features/chat/: chat-create.page.ts  chat-detail.page.ts  chat-list.page.ts  chat.service.ts  chat.types.ts  message.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/theme/: variables.scss
infra/: docker-compose.gpu.yml  docker-compose.yml
infra/ollama/: pull-models.ps1  pull-models.sh
worker/: README.md  pyproject.toml  requirements.txt
worker/app/: embeddings.py  main.py  parsing.py  sandbox.py  settings.py
(+170 files in other folders)
